--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title> OSLO's Websites</title> 
+<title> My Profile</title> 
 </head>
 <style>
     img {
@@ -36,15 +36,23 @@
 <table border="1">
 		<tr>
 			<th>Dates</th>
-			<th>Work</th>
+			<th>School</th>
 		</tr>
 		<tr>
-			<td>2010 - 2013</td>
-			<td>Senior Programmer</td>
+			<td>2015</td>
+			<td>Graduated Elementary</td>
 		</tr>
 		<tr>
-			<td>2010</td>
-			<td>IT Staff</td>
+			<td>2019</td>
+			<td>Graduated High School</td>
+		</tr>
+        <tr>
+			<td>2021</td>
+			<td>Graduated Senior High School</td>
+		</tr>
+        <tr>
+			<td>2022</td>
+			<td>Currently in College</td>
 		</tr>
 </table>
 <hr>
@@ -92,5 +100,8 @@
 <a href="myhobbies.html">My Hobbies </a> <a href="mycontact.html">My Contact</a>
 <hr>
 </body>
+
+
+
 
 </html>
